--- a/Set1/Functions.ipynb
+++ b/Set1/Functions.ipynb
@@ -16,6 +16,49 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def base64tobin(s):\n",
+    "    bin1=\"\"\n",
+    "    for x in s:\n",
+    "        bin2=\"\"\n",
+    "        if(x>='A' and x<='Z'):\n",
+    "            bin2=bin(ord(x)-ord('A'))\n",
+    "        elif(x>='a' and x<='z'):\n",
+    "            bin2=bin(ord(x)-ord('a')+26)\n",
+    "        elif(x>='0' and x<='9'):\n",
+    "            bin2=bin(ord(x)-ord('0')+52)\n",
+    "        elif(x=='+'):\n",
+    "            bin2=bin(62)\n",
+    "        elif(x=='/'):\n",
+    "            bin2=bin(63)\n",
+    "        bin2=bin2[2:]\n",
+    "        while(len(bin2)<6):\n",
+    "            bin2='0'+bin2\n",
+    "        bin1+=bin2\n",
+    "    return bin1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def base64toascii(s):\n",
+    "    bin1=base64tobin(s)\n",
+    "    while(len(bin1)%8!=0):\n",
+    "        bin1='0'+bin1\n",
+    "    ret=\"\"\n",
+    "    for i in range(0,len(bin1),8):\n",
+    "        ret+=chr(int(bin1[i:i+8],2))\n",
+    "    return ret"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
    "outputs": [
@@ -123,6 +166,24 @@
    ],
    "source": [
     "decrypt_hex(\"7b5a4215415d544115415d5015455447414c155c46155f4058455c5b523f\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def string_to_bin(s):\n",
+    "    res=\"\"\n",
+    "    for i in range(len(s)):\n",
+    "        num=ord(s[i]);\n",
+    "        bin1=bin(num);\n",
+    "        bin1=bin1[2:]\n",
+    "        while(len(bin1)%8!=0):\n",
+    "            bin1='0'+bin1\n",
+    "        res+=bin1\n",
+    "    return res"
    ]
   }
  ],
