--- a/Set1/Functions.ipynb
+++ b/Set1/Functions.ipynb
@@ -38,23 +38,17 @@
     "        while(len(bin2)<6):\n",
     "            bin2='0'+bin2\n",
     "        bin1+=bin2\n",
-    "    return bin1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def base64toascii(s):\n",
-    "    bin1=base64tobin(s)\n",
+    "    return bin1\n",
+    "def bintoascii(bin1):\n",
     "    while(len(bin1)%8!=0):\n",
     "        bin1='0'+bin1\n",
     "    ret=\"\"\n",
     "    for i in range(0,len(bin1),8):\n",
     "        ret+=chr(int(bin1[i:i+8],2))\n",
-    "    return ret"
+    "    return ret\n",
+    "def base64toascii(s):\n",
+    "    bin1=base64tobin(s)\n",
+    "    return bintoascii(bin1)"
    ]
   },
   {
